--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "history": "^4.10.1",
     "immer": "^4.0.0",
     "polished": "^3.4.1",
     "react": "^16.9.0",
@@ -12,9 +13,12 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
+    "react-toastify": "^5.4.0",
     "reactotron-react-js": "^3.3.4",
     "reactotron-redux": "^3.1.2",
+    "reactotron-redux-saga": "^4.2.2",
     "redux": "^4.0.4",
+    "redux-saga": "^1.1.1",
     "styled-components": "^4.4.0"
   },
   "scripts": {
@@ -22,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server server.json -p 3333"
+    "server": "json-server server.json -p 3333 -d 1000"
   },
   "eslintConfig": {
     "extends": "react-app"
